Notification background-color to theme

--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -202,10 +202,10 @@ nav
 /* -------------------------- NOTIFICATION -------------------------- */
 .notification
   color: #fff
+  background-color: rgba(0,0,0,0.75)
   & .window
     &.growl
       background: rgba(0,0,0,0.8)
-
     &:not(.growl)
       background: #e6e6e6
       color: #222
@@ -217,14 +217,12 @@ nav
         border-radius 0px !important
         border: none !important
         margin-bottom: 1px
-
       &.error
         background: darken(COLOR_cancel, 25%)
         color: #fff
       &.success
         background: darken(COLOR_accept, 25%)
         color: #fff
-
 
 /* -------------------------- BUTTONS -------------------------- */
 header
