Async article load

--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -24,10 +24,14 @@ aside, section
     box-flex(0)
     z-index: 3
     position: relative
+  & > header
+    ordinal-group(1)
   & > article
     box-flex(1)
+    ordinal-group(2)
     z-index: 0
-
+  & > footer
+    ordinal-group(3)
 
 /* ========================================================================= */
 /* ================================ SECTION ================================ */
