nav : [data-control=menu] & [data-control=groupbar]

--- a/src/stylesheets/constants.styl
+++ b/src/stylesheets/constants.styl
@@ -13,3 +13,6 @@ TRANSITION_TIME        = 400ms
 FONT_SIZE_TINY         = 11px
 FONT_SIZE_SMALL        = 0.9em
 FONT_SIZE_BIG          = 1.2em
+
+LIST_PADDING           = 14px
+LIST_PADDING_HORIZONTAL= (LIST_PADDING / 1.25)
