--- a/src/stylesheets/lungo.widgets.styl
+++ b/src/stylesheets/lungo.widgets.styl
@@ -71,6 +71,15 @@ size = 5px
 
 
 /* ================================  CAROUSEL  ================================ */
+[data-view-menu]
+  &:after
+    content: "▼"
+    position: relative
+    top: -5px
+    left: 1px
+    font-size: FONT_SIZE_TINY
+
+/* ================================  CAROUSEL  ================================ */
 [data-control=carousel]
   overflow: hidden
   list-style: none
