--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -58,7 +58,7 @@ section
     color: #fff
     border-radius 4px 4px 0 0
 
-  & > footer, & nav.groupbar
+  & > footer, & nav[data-control=groupbar]
     background-color: DARK
     box-shadow inset 0 3px 0 DARK_dark
   & > article, & > [data-control="pull"]
@@ -90,10 +90,10 @@ nav
       &:active
         color: darken(THEME, 50%)
 
-  section > &.groupbar > a.active
+  section > &[data-control=groupbar] > a.active
     box-shadow inset 0 -3px 0 THEME
 
-  section > footer > & > a, &.groupbar > a
+  section > footer > & > a, &[data-control=groupbar] > a
     color: NAV_LINK
     &.active
       color: NAV_LINK_ACTIVE
@@ -114,17 +114,30 @@ nav
     COLOR = DARK
     background: COLOR
     box-shadow 0 2px 0 rgba(0,0,0,0.15)
+
+    &.icons
+      background: rgba(0,0,0,0.8)
+      & > a
+        color: lighten(COLOR, 35%)
+        &:active > .icon
+          text-shadow: 0 0 32px #fff
+        & > .icon
+          color: #fff
+    &:not(.icons)
+      & > a
+        color: #fff
+        text-shadow 0 1px 0 #111
+        border-bottom: 1px solid darken(COLOR, 40%)
+        border-top: 1px solid lighten(COLOR, 5%)
+        &:active
+          background: #111
+          border-color: transparent
+        & > .icon
+          color: lighten(COLOR, 25%)
     & > a
-      color: #fff
-      text-shadow 0 1px 0 #111
       font-weight: 700
-      border-bottom: 1px solid darken(COLOR, 40%)
-      border-top: 1px solid lighten(COLOR, 5%)
-      &:active
-        background: #111
-        border-color: transparent
-      & > .icon
-        color: lighten(COLOR, 25%)
+
+
 
 
 /* -------------------------- LISTS -------------------------- */
