data-article for multiple articles (in current section)

--- a/src/stylesheets/lungo.widgets.styl
+++ b/src/stylesheets/lungo.widgets.styl
@@ -9,6 +9,10 @@
 
 @import "constants.styl"
 
+[data-article].hide
+  display: none
+
+
 .overthrow-enabled .overthrow
   overflow: auto
   -webkit-overflow-scrolling: touch
