New layout(flexbox system)

--- a/src/stylesheets/lungo.layout.list.styl
+++ b/src/stylesheets/lungo.layout.list.styl
@@ -90,5 +90,5 @@
       font-size: 1.2em !important
       line-height: 1.1em
 
-  &.indented li
+  &.indented li:not(:last-child)
     margin-bottom: 10px
