--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -98,6 +98,7 @@ article
     visibility: visible
     display: block
     z-index: 1
+    height: inherit
 
     &.pull
       transition-property transform
