--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -32,6 +32,13 @@ THEME           = #0093D5
 THEME_light     = lighten(THEME, 15%)
 THEME_dark      = darken(THEME, 15%)
 
+.bck
+  &.theme
+    background-color: THEME
+  &.cancel
+    background-color: COLOR_cancel
+  &.accept
+    background-color: COLOR_accept
 
 /* -------------------------- DEFAULTS -------------------------- */
 body
